# ramflux-itest

./: Cargo.toml
.github/workflows/: ci.yml  linux-realnet.yml  t22-production-compose.yml  t22-production-measurement.yml  t22-production-positive.yml
perf-artifacts/: dhat-heap-getheavy.json  dhat-heap-putheavy.json  dhat-mem03a0-A-release.json  dhat-mem03a0-B-STALE-dup-of-A-dump-did-not-land.json  dhat-mem03a0-C.json  perf_d1_2_macro_a2d16_run0.json  perf_d1_2_macro_a2fix_b_smoke_run0.json  perf_d1_2_macro_a2fix_c16m_full_run0.json  perf_d1_2_macro_a2fix_c16m_run0.json  perf_d1_2_macro_cut_grid_r1_run0.json  perf_d1_2_macro_cut_grid_r2_run0.json  perf_d1_2_macro_cut_grid_r3_run0.json  perf_d1_2_macro_d12a_fresh1_run0.json  perf_d1_2_macro_d12a_fresh2_run0.json  perf_d1_2_macro_d12b_b1m_r1_run0.json  perf_d1_2_macro_d12b_b1m_r2_run0.json  perf_d1_2_macro_d12b_b1m_run0.json  perf_d1_2_macro_d12b_b512_r1_run0.json  perf_d1_2_macro_d12b_b512_r2_run0.json  perf_d1_2_macro_d12b_b512_run0.json  perf_d1_2_macro_fresh1_run0.json  perf_d1_2_manifest.json  perf_d1_2b_k4_a0b_cand32_r1_UNWIRED_run0.json  perf_d1_2b_k4_a0b_cand32_r1_run0.json  perf_d1_2b_k4_a0b_cand32_r2_run0.json  perf_d1_2b_k4_a0b_control_run0.json  perf_d1_2b_k4_a0c_cand16_r1_run0.json  perf_d1_2b_k4_a0c_cand16_r2_run0.json  perf_d1_2b_k4_a0c_closure_run0.json  perf_d1_2b_k4_a0c_control_run0.json  perf_d1_2b_k4_a2trim_k4_r1_run0.json  perf_d1_2b_k4_a3jem_k4_r1_run0.json  perf_d1_2b_k4_cut_k4_run0.json  perf_d1_2b_k4_d2bA_r1_run0.json  perf_d1_2b_k4_d2bA_r2_run0.json  perf_d1_2b_k4_d2bk4_r1_run0.json  perf_d1_2b_k4_d2bk4_r2_run0.json  perf_d1_2b_manifest.json  perf_mem02_getheavy_mem02_k1.json  perf_mem02_k16_mem02_k16.json  (+5 more)
src/: lib.rs  quic_loadgen_core.rs
src/harness/: a2i_a2ui.rs  daemon_prod.rs  default_domain_fixtures.rs  federation_nodes_a.rs  federation_nodes_b.rs  federation_sync.rs  fixtures.rs  friend_block.rs  gateway_session_flow.rs  group_sender_keys_a.rs  group_sender_keys_b.rs  group_sender_keys_c.rs  group_sender_keys_d.rs  legacy_realnet_fixtures.rs  local_federation_full_chain.rs  mod.rs  mvp1_identity_dm_a.rs  mvp1_identity_dm_b.rs  mvp1_identity_dm_c.rs  mvp2_friend_group.rs  mvp3_objects_mcp_webrtc.rs  mvp4_federation_a.rs  mvp4_federation_b.rs  mvp6_trust_abuse_a.rs  mvp6_trust_abuse_b.rs  mvp7_compliance.rs  mvp8_trust_friend.rs  mvp9_messages.rs  object_sync_crypto_fixtures.rs  objects_calls_bots.rs  private_node_gateway_frames.rs  push.rs  realnet_compose_stun.rs  rf_cli.rs  rf_cli_account_mcp_flow_a.rs  rf_cli_account_mcp_flow_b.rs  sdk_daemon_bus_flow.rs  transport_backends.rs
src/tests/: federation.rs  fixtures_smoke.rs  groups_bots.rs  identity_sdk_a.rs  identity_sdk_b.rs  local_support.rs  mcp_a2ui_webrtc.rs  messages.rs  misc.rs  mod.rs  mvp01_realnet.rs  mvp10_coverage.rs  mvp23_realnet.rs  mvp45_realnet.rs  mvp6_trust_abuse.rs  mvp7_compliance.rs  mvp8_federation.rs  mvp9_messages.rs  mvp_s01_gateway_session.rs  mvp_s02_sdk_session.rs  mvp_s03_daemon_bus.rs  mvp_s04_rf_cli_x3dh.rs  mvp_s06_mcp_host.rs  mvp_s07_group_sender_key.rs  mvp_s08_federation_dm.rs  mvp_s09_friend_group.rs  mvp_s10_private_node.rs  mvp_s11_double_ratchet.rs  mvp_s12_discovery.rs  (+57 more)
(+1 files in other folders)
