[package]
name = "ramflux-itest"
version = "0.1.0"
edition = "2024"
rust-version = "1.96.0"
license = "AGPL-3.0-or-later"
repository = "https://github.com/ramfluxhq/ramflux-itest"

[features]
default = []
loadgen = ["dep:http-body-util", "dep:hyper", "dep:hyper-util"]
realnet = ["dep:ramflux-cli-pro", "ramflux-sdk/itest-fingerprint", "ramflux-sdk/itest-local-mint"]

[dependencies]
ramflux-core = { git = "https://github.com/ramfluxhq/ramflux.git", rev = "ae74754ce30e73ee61e8634276124fdbaec434cd", package = "ramflux-core" }
ramflux-protocol = { git = "https://github.com/ramfluxhq/ramflux.git", rev = "ae74754ce30e73ee61e8634276124fdbaec434cd", package = "ramflux-protocol" }
ramflux-crypto = { git = "https://github.com/ramfluxhq/ramflux.git", rev = "ae74754ce30e73ee61e8634276124fdbaec434cd", package = "ramflux-crypto" }
ramflux-storage = { git = "https://github.com/ramfluxhq/ramflux.git", rev = "ae74754ce30e73ee61e8634276124fdbaec434cd", package = "ramflux-storage" }
ramflux-sync = { git = "https://github.com/ramfluxhq/ramflux.git", rev = "ae74754ce30e73ee61e8634276124fdbaec434cd", package = "ramflux-sync" }
ramflux-transport = { git = "https://github.com/ramfluxhq/ramflux.git", rev = "ae74754ce30e73ee61e8634276124fdbaec434cd", package = "ramflux-transport" }
ramflux-sdk = { git = "https://github.com/ramfluxhq/ramflux.git", rev = "ae74754ce30e73ee61e8634276124fdbaec434cd", package = "ramflux-sdk" }
ramflux-node-core = { git = "https://github.com/ramfluxhq/ramflux.git", rev = "ae74754ce30e73ee61e8634276124fdbaec434cd", package = "ramflux-node-core" }
ramflux-cli-pro = { git = "https://github.com/ramfluxhq/ramflux-tui.git", rev = "9c20202ba525982e92f09f9b0c68d7726f34e87c", package = "ramflux-cli-pro", optional = true }
anyhow = "1.0"
aes-gcm = "0.10"
blake3 = "1.8.5"
bytes = "1.10"
ed25519-dalek = "2.2.0"
h2 = "0.4"
hkdf = "0.12.4"
http = "1.3"
http-body-util = { version = "0.1", optional = true }
hyper = { version = "1.10.1", features = ["client", "http1"], optional = true }
hyper-util = { version = "0.1.20", features = ["client-legacy", "http1", "tokio"], optional = true }
insta = "1.47.2"
p256 = { version = "0.13", features = ["ecdh"] }
proptest = "1.11.0"
quinn = "0.11.9"
ratatui = "0.29"
rcgen = "0.14"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
rustls-pki-types = "1.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
testcontainers = "0.27.3"
tokio = { version = "1.42", features = ["io-util", "macros", "net", "rt-multi-thread", "time"] }
tokio-rustls = "0.26"
tracing = "0.1"

[[bin]]
name = "notify_loadgen"
path = "src/bin/notify_loadgen.rs"
required-features = ["loadgen"]

[[bin]]
name = "quic_loadgen"
path = "src/bin/quic_loadgen.rs"
required-features = ["loadgen"]

[lints.rust]
warnings = "deny"
unsafe_code = "deny"

[lints.clippy]
all = "deny"
correctness = "deny"
suspicious = "deny"
complexity = "deny"
perf = "deny"
style = "deny"
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
dbg_macro = "deny"
